Fix alignfull CSS to increase cross-browser compatibility

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ q cite a {
 	text-decoration: underline;
 }
 
+body {
+	width: 100%; 
+}
+
 body,
 button,
 input,
@@ -29,7 +33,6 @@ textarea {
 	font-size: 15px;
 	line-height: 1.7;
 	word-wrap: break-word;
-	overflow-x:  hidden;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -620,20 +623,51 @@ ul.iconfont i {
 	margin-top: -10px;
 }
 
-
 .alignwide, .alignfull {
 	margin: 32px calc(50% - 50vw);
 	max-width: 100vw;
-	width: 99vw;
-	padding:15px;
+	width: 100vw;
+	position: relative;
+	padding-right:10px !important
+	padding-bottom:7px
 }
 
+.alignfull h1, h2, h3, h4, h5, h6 {
+	margin-left:40px;
+}
+.alignfull p {
+	margin-left:40px;
+	margin-right:30px;
+	padding-right:5px;
+}
+.alignfull ul {
+	margin-left:40px;
+	margin-right:30px;
+	padding:5px;
+	padding-right:5px;
+}
+.alignwide img {
+	max-width: 1024px;
+}
+.entry-content > .alignwide {
+     max-width: 1024px;
+}
+.wp-block-columns {
+	margin-bottom:0px;
+	padding-bottom:0px;
+}
 @media (max-width: 920px) {
 	.alignwide {
 		margin: 32px calc( ( 767px - 920px ) / 2 );
 		max-width: 920px;
 		width: 920px;
 	}
+	body{
+		overflow-x:hidden !important;
+	}
+}
+.has-very-dark-gray-background-color a {
+	color: #e6f2ff;
 }
 
 #eckb-article-page-container-v2 .eckb-article-content-footer__article-meta {
@@ -650,6 +684,7 @@ figcaption {
 	font-size: 80%;
 	color: #bbb;
 }
+
 
 
 /* CSS for Echo Kb Plugin */
